# cbasic

./: .gitignore  CMakeLists.txt  LICENSE  README.md
samples/: .gitignore  _test_mixed.bas  _test_op_prec.bas  _test_various.bas  fibo.bas  str.bas  test.bas  test2.bas
src/: cbasic.cc  configure.h  configure.h.in  verbose.h  version.h
src/backends/interface/: backend.cc  backend.h
src/backends/x86-nasm/: x86-nasm-backend.cc  x86-nasm-backend.h  x86-nasm-primitives.cc  x86-nasm-primitives.h
src/error/: error.cc  error.h
src/ilang/: il-address.cc  il-address.h  il-block.cc  il-block.h  il-instructions.cc  il-instructions.h  il-program.cc  il-program.h
src/libcbasic/x86/: libcbasic.asm
src/parser/: .gitignore  constant-folding.cc  constant-folding.h  find-symbols.h  identifier-node.cc  identifier-node.h  lexer.h  lexer.l  operator-nodes.cc  operator-nodes.h  parser-context.cc  parser-context.h  parser-node.cc  parser-node.h  parser.yy  statement-nodes.h  tree-walker.cc  tree-walker.h  type-checking.cc  type-checking.h  value-nodes.cc  value-nodes.h
src/parser/nodes/: expression-node.h  identifier-node.cc  identifier-node.h  operator-nodes.cc  operator-nodes.h  parser-node.cc  parser-node.h  statement-nodes.cc  statement-nodes.h  value-nodes.cc  value-nodes.h
src/parser/operations/: constant-folding.cc  constant-folding.h  find-symbols.cc  find-symbols.h  resolve-identifiers.cc  resolve-identifiers.h  type-checking.cc  type-checking.h
src/symbols/: basic-types.cc  basic-types.h  symbol-table.cc  symbol-table.h
